syntax = "proto3";

option go_package = "grpc/user_contact_details";

service UserContactDetails {
    rpc GetUserContactDetails(ContactDetailsRequest) returns (ContactDetailsResponse) {}
}

message ContactDetailsRequest {
    string userId = 1;
}

message ContactDetailsResponse {
    string name = 1;
    string email = 2;
    string countryCode = 3;
    string phone = 4;
}